Closed Bug 21436 Opened 26 years ago Closed 26 years ago

[DOGFOOD]Opening a message with web page attached leads to a crash

Categories

(SeaMonkey :: MailNews: Message Display, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: marina, Assigned: rhp)

References

Details

(Whiteboard: [PDT+] have fix; waiting for review)

Steps to reproduce: -send page (from seamonkey or 4.x) - go File|Send page (mozilla.org) - get new message; - select to open //note: application crashes
QA Contact: lchiang → pmock
Summary: Opening a message with web page attached leads to a crash → [DOGFOOD]Opening a message with web page attached leads to a crash
marina - do you have a stack trace/talkback report? cc: rhp
Whiteboard: [PDT+]
I tried this on both local and imap folders, w/o a problem. I'll try a release build as well.
can anyone reproduce this? If not, I would suggest it's not a dogfood bug.
fyi, I can't reproduce this either. I tried POP and IMAP using today win32 commerical seamonkey build 1999-12-12-09-m12. I sent web pages of www.mozilla.org, www.netcenter.com, and www.thecase.com (one of my favorites sites).
the build i'm using is 1999-12-09-08 and it is 100% reproducable. I'll test it with the new one and commment.
Assignee: phil → rhp
Reassign to rhp. Marina, we really need a talkback incident.
here is a stock: Trigger Type: Program Crash Trigger Reason: Access violation Call Stack: (Signature = 0x00000090 395999d8) 0x00000090 nsXULPrototypeDocument::~nsXULPrototypeDocument [d:\builds\seamonkey\mozilla\rdf\content\src\nsXULPrototypeDocument.cpp, line 111] nsXULPrototypeDocument::`scalar deleting destructor' nsXULPrototypeDocument::Release [d:\builds\seamonkey\mozilla\rdf\content\src\nsXULPrototypeDocument.cpp, line 114] nsCOMPtr_base::~nsCOMPtr_base [d:\builds\seamonkey\mozilla\xpcom\base\nsCOMPtr.cpp, line 45] DocumentViewerImpl::~DocumentViewerImpl [d:\builds\seamonkey\mozilla\layout\base\src\nsDocumentViewer.cpp, line 331] nsXULDocument::`scalar deleting destructor' nsXULDocument::Release [d:\builds\seamonkey\mozilla\rdf\content\src\nsXULDocument.cpp, line 539] nsCOMPtr_base::~nsCOMPtr_base [d:\builds\seamonkey\mozilla\xpcom\base\nsCOMPtr.cpp, line 45] DocumentViewerImpl::~DocumentViewerImpl [d:\builds\seamonkey\mozilla\layout\base\src\nsDocumentViewer.cpp, line 331] DocumentViewerImpl::`scalar deleting destructor' DocumentViewerImpl::Release [d:\builds\seamonkey\mozilla\layout\base\src\nsDocumentViewer.cpp, line 256] nsWebShell::Embed [d:\builds\seamonkey\mozilla\webshell\src\nsWebShell.cpp, line 872] nsDocumentBindInfo::OnStartRequest [d:\builds\seamonkey\mozilla\webshell\src\nsDocLoader.cpp, line 1397] nsStreamConverter::OnStartRequest [d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 668] nsDocumentOpenInfo::OnStartRequest [d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 205] nsChannelListener::OnStartRequest [d:\builds\seamonkey\mozilla\webshell\src\nsDocLoader.cpp, line 1583] nsMsgProtocol::OnStartRequest [d:\builds\seamonkey\mozilla\mailnews\base\util\nsMsgProtocol.cpp, line 188] nsMailboxProtocol::OnStartRequest [d:\builds\seamonkey\mozilla\mailnews\local\src\nsMailboxProtocol.cpp, line 135] nsFileChannel::OnStartRequest [d:\builds\seamonkey\mozilla\netwerk\protocol\file\src\nsFileChannel.cpp, line 480] nsOnStartRequestEvent::HandleEvent [d:\builds\seamonkey\mozilla\netwerk\base\src\nsAsyncStreamListener.cpp, line 199] nsStreamListenerEvent::HandlePLEvent [d:\builds\seamonkey\mozilla\netwerk\base\src\nsAsyncStreamListener.cpp, line 94] PL_HandleEvent [plevent.c, line 523] _md_EventReceiverProc [plevent.c, line 951] USER32.dll + 0x1820 (0x77e71820)
Marina, can you try this with today's build? Thanks.
Marina, I just downloaded today win32 commercial seamonkey build 1999-12-13-09-m12 and could not reproduce the problem under POP on IMAP. I am testing on win98. /Peter
just verified it and got another crash : here are the steps that i think should be followed to get a crash: -send page to your account(twice: mozilla.org and cnn.com) -get messages; -open the first one with mozilla.org (no problem so far); -now go to the second message with cnn.com attached: //note: message body is not loading, it is blank; - now if you go back to the message with mozilla.org application will crash and your system will run out of the virtual memory
Thanks Marina, I can reproduce this problem on today win32 build under IMAP. I viewed my two mail message that had attached web page of www.mozilla.org then I tried to view the message with the www.cnn.com web page. It fails to display the message. The message pane is blank. I waited then tried to select another message that had a web page attachment then crashed. The talkback incident id is 2365035 I get a similar stack as Marina. Thanks Marina for the steps. /Peter
I can reproduce the crash on both Mac & Window with debug builds from this morning. I crash when displaying the message that contains the cnn.com page (IMAP & POP). It crash in nsEventStateManager::CheckDisable() when calling aContent->GetTag().
Ok, I can reproduce this pretty easily and I will post a XUL document that is causing the crash, but this is dying in RDF, not anything I am doing. I will further diagnose, but I'll have to pass it along. - rhp
Status: NEW → ASSIGNED
Target Milestone: M12
Ok, I see what the problem is here. We are blowing out the buffer size of the output stream with these big messages (CNN home page is 80K, how lame). I think I have a fix for this. - rhp
Let me be more clear...I know how I think I have to fix it...no fix in hand yet. - rhp
Ok, the problem here is that we are writing a very large message that has been Base64 encoded and the buffer can't take any more data. I'm not sure how we can handle this. mscott: Is there any way you can think of dealing with this? - rhp
Whiteboard: [PDT+] → [PDT+] have fix; waiting for review
Chris, I put this on the wrong bug. I'd like to check this in: Index: mozilla/mailnews/mime/emitters/src/nsMimeBaseEmitter.cpp =================================================================== RCS file: /cvsroot/mozilla/mailnews/mime/emitters/src/nsMimeBaseEmitter.cpp,v retrieving revision 1.6 diff -p -r1.6 nsMimeBaseEmitter.cpp *** nsMimeBaseEmitter.cpp 1999/12/08 03:33:23 1.6 --- nsMimeBaseEmitter.cpp 1999/12/14 00:30:27 *************** nsMimeBaseEmitter::Complete() *** 122,128 **** // to flush it...if we try and fail, we should probably return // an error! PRUint32 written; ! if ( (mBufferMgr) && (mBufferMgr->GetSize() > 0)) Write("", 0, &written); if (mOutListener) --- 122,128 ---- // to flush it...if we try and fail, we should probably return // an error! PRUint32 written; ! while ( (mBufferMgr) && (mBufferMgr->GetSize() > 0)) Write("", 0, &written); if (mOutListener)
Is 21408 a dup of this then, based on where ducarroz said the crash is occurring?
Could be....if its a very large message, you will crash...I have a fix in hand. - rhp
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Should be fixed now. - rhp
*** Bug 21408 has been marked as a duplicate of this bug. ***
Status: RESOLVED → VERIFIED
Verified as fixed on win32, linux, and macos. I verified this bug using the following builds. ftp://sweetlou/products/client/seamonkey/windows/32bit/x86/1999-12-14-09-M12/sea monkey32e.exe ftp://sweetlou/products/client/seamonkey/unix/linux_glibc/2.2/x86/1999-12-14-11- M12/netscape-i686-pc-linux-gnu.tar.gz ftp://sweetlou/products/client/seamonkey/macos/8.x/ppc/1999-12-14-08-M12/NSMacIn staller-M12.sea.bin I could not duplicate crash.
Blocks: 22176
No longer blocks: 22176
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.