Fix for crasher in mail display - Bug #21436 r: valeski - Approval: chofmann